@@ -35,8 +35,9 @@ syn region   pureString		start=+"+ skip=+\\"+ end=+"+
 syn keyword pureKeyword	infix infixl infixr prefix postfix nullary
 syn keyword pureKeyword	case else end extern if let of otherwise then
 syn keyword pureKeyword	using when with
-syn keyword pureIdentifier bigint bool char short int long double
-syn keyword pureIdentifier expr string pointer void
+syn keyword pureSpecial catch throw
+syn keyword pureType bigint bool char short int long double
+syn keyword pureType expr string pointer void
 
 syn match   pureNumber	         "\<[0-9]*\>"
 syn match   pureHexNumber	 "\<0[Xx][0-9A-Fa-f]*\>"
@@ -68,6 +69,8 @@ if version >= 508 || !exists("did_pure_syn_inits")
   HiLink pureSpecialCharacter	Special
   HiLink pureNumber		Number
   HiLink pureHexNumber		Number
+  HiLink pureType		Type
+  HiLink pureSpecial		Identifier
   HiLink pureIdentifier		Identifier
   HiLink pureCommentError	Error
   HiLink pureString		String
